# search-space-openmp

./: CMakeLists.txt  main.cpp
algorithms/: bfs.cpp  costs_iddfs.cpp  iddfs.cpp
